--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1C1C1E</color>
-    <color name="colorPrimaryDark">#1C1C1E</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF375F</color>
-    <color name="background">#1C1C1E</color>
+    <color name="background">#000000</color>
+    <color name="bottomBackground">#1C1C1E</color>
+    <color name="grey">#8E8E93</color>
 </resources>
