--- a/app/src/main/res/layout/for_you_fragment.xml
+++ b/app/src/main/res/layout/for_you_fragment.xml
@@ -9,6 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/this_is_for_you_fragment" />
+        android:text="@string/this_is_for_you_fragment"
+        android:textSize="30sp"/>
 
 </FrameLayout>
