--- a/app/src/main/res/drawable/icon_color.xml
+++ b/app/src/main/res/drawable/icon_color.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/colorAccent" android:state_checked="true"/>
-    <item android:color="@color/grey" android:state_checked="false"/>
+    <item android:color="@color/grey" android:state_checked="false" android:state_active="false" android:state_selected="false"/>
 </selector>
 
