--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:background="@color/background"
         android:elevation="4dp"
         android:theme="@style/CustomToolbarTheme"
+        app:title=" "
         tools:targetApi="21" />
 
     <!--Frame Layout for using the fragments in the application-->
