--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="background">#000000</color>
     <color name="bottomBackground">#1C1C1E</color>
     <color name="grey">#8E8E93</color>
+    <color name="horizontalLine">#48484A</color>
 </resources>
