--- a/app/src/main/res/layout/library_fragment.xml
+++ b/app/src/main/res/layout/library_fragment.xml
@@ -160,6 +160,27 @@
             android:layout_height="1dp"
             android:background="@color/horizontalLine"/>
         <!--List Ends-->
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp" />
+
+        <TextView
+            android:id="@+id/library_recently_added"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/recently_added"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <!--Tile view of recently added Music-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/library_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp" />
+
 
 
     </LinearLayout>
