--- a/app/src/main/res/layout/library_fragment.xml
+++ b/app/src/main/res/layout/library_fragment.xml
@@ -179,7 +179,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp" />
+            android:layout_marginRight="15dp"
+            tools:listitem="@layout/libray_recycler_view_layout"/>
 
 
 
