--- a/app/src/main/res/layout/libray_recycler_view_layout.xml
+++ b/app/src/main/res/layout/libray_recycler_view_layout.xml
@@ -2,25 +2,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="130dp">
+    android:layout_height="165dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp">
+        android:background="@android:color/transparent"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="7dp"
+        app:cardElevation="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/background"
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/album_art"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="120dp"
+                android:contentDescription="@string/album_art"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/roses_cover"
-                android:contentDescription="@string/album_art" />
+                app:srcCompat="@drawable/roses_cover" />
+
+            <TextView
+                android:id="@+id/song_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:background="@android:color/transparent"
+                android:fontFamily="@font/sf_pro"
+                android:text="@string/roses"
+                android:textColor="@android:color/white" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
